--- a/templates/web/config
+++ b/templates/web/config
@@ -26,6 +26,6 @@ $projectroot = "<%= projectroot %>";
 
 # A list of base urls where all the repositories can be cloned from.
 # Easier than having per-repository cloneurl files.
-@git_base_url_list = ('git://<%= gitweb_url %>');
+@git_base_url_list = ('git://<%= name %>');
 
 $GITWEB_SITENAME = "<%= gitweb_sitename %>"
